# eDNAAqua-Plan

./: .gitignore  README.md  bold_metadata.json  pyproject.toml
docs/details/: aquatic_filtering.md  interoperability.md  where_eDNA_archives_fit.md
source/: analyse_environmental_data_ena.py  analyse_environmental_info.py  data_utils.py  eDNA_utilities.py  enaDataGrab.sh  ena_api_calls.py  ena_portal_api.py  geography.py  get_environmental_info.py  get_taxononomy_scientific_name.py  mine_bioinfomatics_eval.py  mine_questionnaire_eval.py  run_ena_get_filter_analysis.py  sample.py  sample_collection.py  study.py  study_collection.py  taxonomy.py  test_fs_api.py  test_fs_api_2.py  test_geography.py  test_study_collection.py  test_taxonomy.py
source/JSON-LD_ODIS/: README.md  project-input.json  project.py  sample-input.json  sample.py
