project = { dependencies = [
    "pandas>=2.2.2",
] }
[tool.poetry]
name = "ednaaqua-plan"
version = "0.1.0"
description = ""
authors = ["woollard <woollard@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
